Fixed bug in Portfolio component avoiding overflow

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -11,6 +11,7 @@
   flex-grow: 1;
   margin: 0 $s-size;
   overflow: auto;
+  position: relative;
 }
 
 @media (min-width: $tablet-breakpoint) {
